test_failures_2.log
============================= test session starts ==============================
platform linux -- Python 3.13.11, pytest-9.0.2, pluggy-1.6.0 -- /usr/local/bin/python
cachedir: .pytest_cache
rootdir: /app
plugins: mock-3.15.1, cov-7.0.0, requests-mock-1.12.1
collecting ... collected 194 items / 1 error

==================================== ERRORS ====================================
________________ ERROR collecting tests/test_guest_security.py _________________
/home/qrapp/.local/lib/python3.13/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
/home/qrapp/.local/lib/python3.13/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/local/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
/home/qrapp/.local/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/home/qrapp/.local/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/local/lib/python3.13/ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "/app/tests/test_guest_security.py", line 7
E       patch('services.order_access.get_order_for_request') as mock_auth, \
E   IndentationError: unexpected indent
=============================== warnings summary ===============================
utils/logger.py:16
utils/logger.py:16
utils/logger.py:16
  /app/utils/logger.py:16: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    "timestamp": datetime.utcnow().isoformat(),

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ============================
ERROR tests/test_guest_security.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
========================= 3 warnings, 1 error in 3.49s =========================
